--- a/stone-rose.html
+++ b/stone-rose.html
@@ -76,7 +76,7 @@ to experience true value, which can only be found in non sense.
 H owling 
 <p>in squeezing Pressure</p>
 <p>Cutting-edge genital ()wounds</p>
-<p>by state-of-the-art drill bits</p>
+<p>bored by state-of-the-art drill bits</p>
 Ent ice
 <p>to go inside.</p>
 
@@ -108,11 +108,11 @@ which controlled the pulse of the artifice in an obscure rhythm.
 In total it resembled an overpriced 'DIY' kit, 
 which in truth just requires blunt assemblage, 
 the automated reaction to a simple given task, 
-that comes handy in the post-future wars raging in the zone.
+that come handy in the post-future wars raging in the zone.
 They can be purchased by kids eager pleasing their slave masters, 
 who pay them back only in exposure. 
 Such mobiles brought to you by the sun, 
-with hidden strings and apparently motivated by thin air, 
+with hidden strings and apparently motivated by thin air
 are truly fascinating but unreachable for small people,
 as they function completey different from tellurian spatio-temporal physical law.
 Anyway, the femur got me to this sterile grave in the first instance.
@@ -126,14 +126,12 @@ and to fix the hap-hazards of the outdated bloated construct.
 Had to get away away, but only to run in circles, 
 the recurring, once agonizing, loss of direction, 
 doesn't bother me that much, when letting go and the body taking control over me.
-
 I make out a speckle of dust in a distance to find a
 torn spacesuit about 30 yards away. Actually angry about myself, I blare
-
 <br>"Where was your rational thinking then, private Unidentified, huh?"<br>
 "stripping down here in Cyberia?"<br>
 but on further consideration I mumbled remorsefully
-"well, where there's foo, there's fire", and 
+"well, where there's foo, there's fire", and acknowledged
 her late reactions to hyperthermia as not so stupid after all. 
 
 severed 
