edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -53,7 +53,7 @@ as I was in a smokescreen from shooting all my powder.
 Bullets of desire intensified in any direction and it was 
 too late to trigger the scram procedure. 
 In this theatre of operation
-the allied's secret weapon is a trillionth of a rock, 
+the enemy's secret weapon is a trillionth of a rock, 
 stuff, you can actually 'see' if you just look close enough. 
 The technology penetrating the flesh directly through the vein, 
 molting the brain and sending shivers up and down my spine. 
@@ -113,7 +113,7 @@ They can be purchased by kids eager pleasing their slave masters,
 who pay them back only in exposure. 
 Such mobiles brought to you by the sun, 
 with hidden strings and apparently motivated by thin air
-are truly fascinating but unreachable for small people,
+are truly fascinating but unreachable for little ones,
 as they function completey different from tellurian spatio-temporal physical law.
 Anyway, the femur got me to this sterile grave in the first instance.
 Was it blood seepage from broken vessels
@@ -125,7 +125,7 @@ This corpse was clearly mummified to be reaweaken
 and to fix the hap-hazards of the outdated bloated construct.
 Had to get away away, but only to run in circles, 
 the recurring, once agonizing, loss of direction, 
-doesn't bother me that much, when letting go and the body taking control over me.
+now doesn't bother me that much, when letting go and the body taking control over me.
 I make out a speckle of dust in a distance to find a
 torn spacesuit about 30 yards away. Actually angry about myself, I blare
 <br>"Where was your rational thinking then, private Unidentified, huh?"<br>
@@ -133,34 +133,33 @@ torn spacesuit about 30 yards away. Actually angry about myself, I blare
 but on further consideration I mumbled remorsefully
 "well, where there's foo, there's fire", and acknowledged
 her late reactions to hyperthermia as not so stupid after all. 
-
-severed 
-On Xaminination I found 
-a crack in her skull, which had a sharp incsion, 
-that reminded me of the medival practice of opening a vent to drive away evil specter. 
-But she certainly was once a fit and experienced spaceexplorer, 
-but would the wound her brain have killed her in an instant and
+So on coincide I find the crime scene both here and there, 
+obviously the old puerility of apportion the blame. 
+And on exhuming I find a crack in her cranium, 
+a deep incision, 
+that reminded me of the medieval practice of opening a vent to drive away evil specter. 
+She certainly was once a fit and experienced spaceexplorer, 
+so would this hole have killed her in an instant and
 was deadly on its own?
+Two glass marbles replace her once moist organs of sight and
+stare at me from the astronaut's skull. 
+Disgusted by the foul relic, I decide to go back as the dust yearns for mess, asking for it. 
 
-Two glass marbles replaced her once moist organs of sight, 
-stare at me from the astronauts skull. 
 
-A foul relic, 
-so I decide to go back as the dust yearns for mess, asking for it. 
-if those eyes of glass would fit my dark holes perfectly. 
-But then 
+The eyes made of glass would fit my dark holes perfectly,
+but then 
 a hole is superior to a protrusion, 
 as it points deep towards the center of gravity 
 and doesn't brag about its elevated 
-superficial layer illuminated by the sun. 
-Any mountain is garbage, 
-an excrement of earth,  
+superficial status quo illuminated by the sun. 
+
+Any excess is garbage, an excrement of earth,  
 for which the sun is to blame. 
 
 The sun makes us do things.
-Precous stuff is in the soil, 
-but once excavated, danger, 
-choose death and darkness. 
+Precious stuff is in the soil, 
+but repeatadly excavated, as news, 
+choose death, madness and darkness. 
 
 
 At first I was concerned how to get it out, 
@@ -178,8 +177,7 @@ which might be more dignified for conversation.
 But turned out difficult
 not to break into pieces, 
 bending arms behind her, with palms behind her shoulders and facing downwards,
-to give a bit stability for sitting upright.
-in a X-legged position. 
+to give a bit stability for sitting upright in a X-legged position. 
 </p>
 
 
