edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -122,10 +122,10 @@ that our bones, like magnets, were on a collision course?
 
 <p>
 This corpse was clearly mummified to be reaweaken 
-and to fix the hap-hazards of the outdated bloated construct.
-Had to get away away, but only to run in circles, 
-the recurring, once agonizing, loss of direction, 
-now doesn't bother me that much, when letting go and the body taking control over me.
+and to fix the hap-hazards of the depreciated bloated construct.
+Had to get away away, but only to run in circles.
+The recurring, once agonizing, loss of direction
+doesn't bother me that much, when letting go and the body taking control over me.
 I make out a speckle of dust in a distance to find a
 torn spacesuit about 30 yards away. Actually angry about myself, I blare
 <br>"Where was your rational thinking then, private Unidentified, huh?"<br>
@@ -138,21 +138,18 @@ obviously the old puerility of apportion the blame.
 And on exhuming I find a crack in her cranium, 
 a deep incision, 
 that reminded me of the medieval practice of opening a vent to drive away evil specter. 
-She certainly was once a fit and experienced spaceexplorer, 
+Jane Doe certainly was once a fit and experienced space explorer, 
 so would this hole have killed her in an instant and
 was deadly on its own?
-Two glass marbles replace her once moist organs of sight and
+Two marbles replace her once moist organs of sight and
 stare at me from the astronaut's skull. 
-Disgusted by the foul relic, I decide to go back as the dust yearns for mess, asking for it. 
-
-
-The eyes made of glass would fit my dark holes perfectly,
-but then 
-a hole is superior to a protrusion, 
-as it points deep towards the center of gravity 
+Disgusted by the foul relic, 
+I decide to go back as the dust yearns for mess, asking for it. 
+Eyes made out of sand would fit my dark holes perfectly,
+but then a wound is superior to protrusion, 
+as it points towards the center of gravity 
 and doesn't brag about its elevated 
 superficial status quo illuminated by the sun. 
-
 Any excess is garbage, an excrement of earth,  
 for which the sun is to blame. 
 
@@ -169,7 +166,9 @@ dust indistinguishable from the environment.
 Piercing her ribcage, I was breaking violently into her
 exploring her trunk, a thin parchment 
 barrier preventing the intrusion of dust.
-
+yup genauso wie gestern geh for a walk ;)
+thnXXXX 
+trust YERSELF 
 
 I decided to refigure the corpse in a new angle, 
 which might be more dignified for conversation. 
@@ -182,12 +181,13 @@ to give a bit stability for sitting upright in a X-legged position.
 
 
 
-<h6>haemoglobin</h6> the iron transport system
-tunica albuginea 
-(penis ape face)
+<h6>haemoglobin</h6> 
+<p>the iron transport system
+Tunica Albuginea [al″bu-jin´e-ah] of Testis
+strongly densified
 abductor muscle
 bisected nerves
-
+rattle the cage
 
 <p>
 My body feels like packed in polystyrene, 
@@ -241,7 +241,6 @@ I've imagined touching the ripples forming his upper maw
 while of his rough tongue, cleaning away 
 wounds that sin leaves in the weak soul, 
 Scar tissue washed of the scum that sin deposits on our spirit. 
-
 </p>
 
 <h6>Wolf, all about wolves lines from ERasur</h6>
