edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -166,28 +166,27 @@ dust indistinguishable from the environment.
 Piercing her ribcage, I was breaking violently into her
 exploring her trunk, a thin parchment 
 barrier preventing the intrusion of dust.
-yup genauso wie gestern geh for a walk ;)
-thnXXXX 
-trust YERSELF 
 
 I decided to refigure the corpse in a new angle, 
 which might be more dignified for conversation. 
 
 But turned out difficult
 not to break into pieces, 
+I hear the ball shank poppin'
 bending arms behind her, with palms behind her shoulders and facing downwards,
 to give a bit stability for sitting upright in a X-legged position. 
 </p>
 
-
-
-<h6>haemoglobin</h6> 
-<p>the iron transport system
+<h6>Haemoglobin</h6> 
+<p>the iron transport system needless on</p>
+<p>Oxy gen abundance</p>
 Tunica Albuginea [al″bu-jin´e-ah] of Testis
 strongly densified
 abductor muscle
 bisected nerves
 rattle the cage
+sit'n'wait ambush predator
+
 
 <p>
 My body feels like packed in polystyrene, 
@@ -196,46 +195,39 @@ the current of the nervous system.
 To rid myself of this insulating casing, I develop an 
 urge to move, which doesn't give me any relief
 and only worsens the static grinding that is there but unable to locate.
-I decide to sit down on a black stone in empty space
-and figure out what to do now.
-There was a tension which forced me to move
+I decide to sit down on a black stone in empty space to 
+figure out what to do.
+The tension which forced me to move
 now it glues me to the cold rock.
 Strangely enough I find safety in there, 
 perhaps this can be explained due to its ferric content,
 which makes my blood pulsate to the rhythm of inner time.
-
 This is the only rational contact I can make with the real, 
 but I want more. 
-The unspeakable is driving me insane
-but the other option would be again fixation on the imaginary, 
-which means in effect, death either way. 
-
-Then this wolf comes along,
-with his strong and powerful body, 
-he holds supernatural senses 
-and carries 
+Desire is driving me insane
+but the only other option is fixation on the imaginary, 
+which means in effect, I'm spoilt for choice between life and death.  
+Then this wolf comes along. 
+His strong and powerful body holds supernatural sense
+that carries 
 abilities to locate and kill quadrupedals way larger than life itself.
 It sniffs out my pubic hair, which 
 like wires connect my past and present motives. 
+I know he gets me, the long boney snout and a nose, like strong rubber, 
+a combination of a large brain capacity and keen sense of smell,
+is decrypting the burning and uncomfortable truth.
+Still dazed from the only just and imminent eruption of violence
+common among ghouls, I'm cleaning rotting flesh and feces underneath my fringed nails. 
 
-He gets me, 
-as the long boney snout, 
-and a nose, like strong rubber, 
-indicating the combination of a large brain capacity
-for keen sense of smell,
-is revealing the burning truth.
-
-Still dazed from the eruption of violence, 
-a ghoul I was, I'm 
-cleaning the rotting flesh and feces underneath my broken nails. 
-
-The wolf is very articulate, not using any symbols. 
+The wolf is very articulate, 
 He shows me photographs depicting the  
 astronaut with the fresh wound in her skull, 
-observing my reaction, trying to supress my sexual arousal. 
-Trauma changes sexuality, different than before. 
+random sequence of horror.
+
+Observing my reaction, and I try to supress my sexual arousal. 
+Trauma changes sexuality, different than before,
 opens new possibilities.
-I've inhaled the vapor coming from his enourmous scent gland
+Inhaling  the vapor coming from his enourmous scent gland
 a pleasant smell of semen and crude oil.
 I've imagined touching the ripples forming his upper maw
 while of his rough tongue, cleaning away 
@@ -243,13 +235,16 @@ wounds that sin leaves in the weak soul,
 Scar tissue washed of the scum that sin deposits on our spirit. 
 </p>
 
-<h6>Wolf, all about wolves lines from ERasur</h6>
+<h6>Wolf, all about wolves lines from ERasure</h6>
 hoodlum with gold chains<br>
 and double fur coat<br>
 is the wolf anthropol, is he a cop<br>
 
 <p>hate the image in the mirror<br> 
 wants to be betterbetter<br>
+
+
+
 yes nietzsche is in the same fuckin cage<br>
 thats what drives him insane<br>
 and he hates the others<br>
@@ -266,8 +261,6 @@ because I'm surrounded by a void, that is
 dangerously close. 
 A thin layer
 in a random rythm, I can't figure out,  
-I hear the ball shank, 
-
 
 
 
