edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -178,93 +178,79 @@ to give a bit stability for sitting upright in a X-legged position.
 </p>
 
 <h6>Haemoglobin</h6> 
-<p>the iron transport system needless on</p>
+<p>the iron transport system</p> 
+<p>needless on</p>
 <p>Oxy gen abundance</p>
-Tunica Albuginea [al″bu-jin´e-ah] of Testis
-strongly densified
-abductor muscle
-bisected nerves
-rattle the cage
-sit'n'wait ambush predator
-
+<p>Tunica Albuginea [al″bu-jin´e-ah] of Testis</p>
+<p>the sit'n'wait ambush predator</p>
+<p>strongly densified</p>
+<p>when on E mission.</p>
 
 <p>
 My body feels like packed in polystyrene, 
 with each of its fixed pellets adhering to
 the current of the nervous system.
-To rid myself of this insulating casing, I develop an 
+To rid myself of this insulating casing, I've developed this ineffable
 urge to move, which doesn't give me any relief
 and only worsens the static grinding that is there but unable to locate.
 I decide to sit down on a black stone in empty space to 
 figure out what to do.
-The tension which forced me to move
-now it glues me to the cold rock.
+The same obsession which forced me to move along
+now glues me to the cold rock.
 Strangely enough I find safety in there, 
 perhaps this can be explained due to its ferric content,
 which makes my blood pulsate to the rhythm of inner time.
-This is the only rational contact I can make with the real, 
+This is the only contact I can establish with the real, 
 but I want more. 
-Desire is driving me insane
-but the only other option is fixation on the imaginary, 
-which means in effect, I'm spoilt for choice between life and death.  
-Then this wolf comes along. 
+
+Desire is driving me insane,  
+to bow to the doctrine of the image.
+
+While I'm spoilt for choice between life and death
+this wolf comes along. 
+
 His strong and powerful body holds supernatural sense
 that carries 
 abilities to locate and kill quadrupedals way larger than life itself.
 It sniffs out my pubic hair, which 
 like wires connect my past and present motives. 
-I know he gets me, the long boney snout and a nose, like strong rubber, 
-a combination of a large brain capacity and keen sense of smell,
+
+I know he gets me with his long boney snout and a nose, like strong rubber.
+The combination of a large brain capacity and keen sense of smell,
 is decrypting the burning and uncomfortable truth.
-Still dazed from the only just and imminent eruption of violence
-common among ghouls, I'm cleaning rotting flesh and feces underneath my fringed nails. 
 
-The wolf is very articulate, 
-He shows me photographs depicting the  
-astronaut with the fresh wound in her skull, 
-random sequence of horror.
 
-Observing my reaction, and I try to supress my sexual arousal. 
-Trauma changes sexuality, different than before,
-opens new possibilities.
-Inhaling  the vapor coming from his enourmous scent gland
+The wolf is very articulate without using any language, 
+by showing me photographs depicting the  
+astronaut with a fresh wound in her skull, 
+in a random sequence of horror.
+
+He is observing my reaction, and I try to conceal my sexual arousal. 
+by cleaning away rotting flesh and feces underneath my fringed nails. 
+Close now, I'm inhaling  the vapor coming from his enourmous scent gland
 a pleasant smell of semen and crude oil.
-I've imagined touching the ripples forming his upper maw
-while of his rough tongue, cleaning away 
+
+Still dazed from the only just and imminent eruption of violence
+common among ghouls, I remember reading that
+trauma changes sexuality and opens new possibilities. 
+
+Far from reality I'm 
+imagining to be able to touch and inspect the ripples forming in his upper maw. 
+
+his rough tongue, cleaning away 
 wounds that sin leaves in the weak soul, 
 Scar tissue washed of the scum that sin deposits on our spirit. 
 </p>
 
-<h6>Wolf, all about wolves lines from ERasure</h6>
-hoodlum with gold chains<br>
-and double fur coat<br>
+<h6>Wolf, all about wolves</h6>
+<p>Hoodlum with gold chains</p>
+<p>and double fur coat</p>
 is the wolf anthropol, is he a cop<br>
 
 <p>hate the image in the mirror<br> 
 wants to be betterbetter<br>
-
-
-
 yes nietzsche is in the same fuckin cage<br>
-thats what drives him insane<br>
-and he hates the others<br>
-coz they also trapped like him<br>
-phil is useless or freedom<br> 
-in the indifferent world,<br>
 you like to think diff, but ur the same.</p> 
-
-Seize the moment, this slogan makes me chuckle, 
-everything, but if I would be home, I'd reckon the 
-the wind, or better the atmosphere, 
-would sounds like I'm on a spaceship, eerie, 
-because I'm surrounded by a void, that is  
-dangerously close. 
-A thin layer
-in a random rythm, I can't figure out,  
-
-
-
-
 
 
 
