edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -198,44 +198,44 @@ figure out what to do.
 The same obsession which forced me to move along
 now glues me to the cold rock.
 Strangely enough I find safety in there, 
-perhaps this can be explained due to its ferric content,
+perhaps this can be explained because of its ferric content,
 which makes my blood pulsate to the rhythm of inner time.
 This is the only contact I can establish with the real, 
-but I want more. 
-
-Desire is driving me insane,  
+but I hunger for more. 
+Desire is driving me insane, wants me
 to bow to the doctrine of the image.
-
-While I'm spoilt for choice between life and death
-this wolf comes along. 
-
+Then this wolf comes along. 
 His strong and powerful body holds supernatural sense
 that carries 
 abilities to locate and kill quadrupedals way larger than life itself.
 It sniffs out my pubic hair, which 
-like wires connect my past and present motives. 
+like wires connect what was and what's new. 
+I know he gets me with  
+his long boney snout and a nose, like strong rubber,
+indicating a large brain capacity and a keen sense of smell.
+A combo, readily capable of decrypting a burning and uncomfortable truth.
+</p>
 
-I know he gets me with his long boney snout and a nose, like strong rubber.
-The combination of a large brain capacity and keen sense of smell,
-is decrypting the burning and uncomfortable truth.
-
-
-The wolf is very articulate without using any language, 
-by showing me photographs depicting the  
+<p>
+The wolf shows me photographs depicting the  
 astronaut with a fresh wound in her skull, 
-in a random sequence of horror.
+then still girdled by a valley of flesh. 
+The random sequence of horror focuses on how the  
+lower jaw articulates with the skull, 
+the different shapes of lips and formations of
+mouth into an animation of screaming.
 
-He is observing my reaction, and I try to conceal my sexual arousal. 
-by cleaning away rotting flesh and feces underneath my fringed nails. 
+He is observing my reaction, and I try to conceal my sexual arousal
+by cleaning away rotten flesh and feces underneath my fringed nails. 
 Close now, I'm inhaling  the vapor coming from his enourmous scent gland
 a pleasant smell of semen and crude oil.
 
 Still dazed from the only just and imminent eruption of violence
-common among ghouls, I remember reading that
+common among ghouls, I remember reading Ballard writing on 
 trauma changes sexuality and opens new possibilities. 
 
 Far from reality I'm 
-imagining to be able to touch and inspect the ripples forming in his upper maw. 
+speculating to be able to touch and inspect the ripples forming in his upper maw. 
 
 his rough tongue, cleaning away 
 wounds that sin leaves in the weak soul, 
