finish stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -135,6 +135,8 @@ but on further consideration I mumbled remorsefully
 her late reactions to hyperthermia as not so stupid after all. 
 So on coincide I find the crime scene both here and there, 
 obviously the old puerility of apportion the blame. 
+
+Lost her head here
 And on exhuming I find a crack in her cranium, 
 a deep incision, 
 that reminded me of the medieval practice of opening a vent to drive away evil specter. 
@@ -155,9 +157,9 @@ for which the sun is to blame.
 
 The sun makes us do things.
 Precious stuff is in the soil, 
-but repeatadly excavated, as news, 
+but repeatadly excavated, as fossil news, 
 choose death, madness and darkness. 
-
+lubricant for warmachine.
 
 At first I was concerned how to get it out, 
 but then it was easier than thought, 
@@ -166,10 +168,11 @@ dust indistinguishable from the environment.
 Piercing her ribcage, I was breaking violently into her
 exploring her trunk, a thin parchment 
 barrier preventing the intrusion of dust.
-
+DNA
 I decided to refigure the corpse in a new angle, 
 which might be more dignified for conversation. 
-
+connect my fibers to the new mind, in the abdomen?
+near heart?
 But turned out difficult
 not to break into pieces, 
 I hear the ball shank poppin'
@@ -205,7 +208,7 @@ but I hunger for more.
 Desire is driving me insane, wants me
 to bow to the doctrine of the image.
 Then this wolf comes along. 
-His strong and powerful body holds supernatural sense
+Hoodlum's strong and powerful body holds supernatural sense
 that carries 
 abilities to locate and kill quadrupedals way larger than life itself.
 It sniffs out my pubic hair, which 
@@ -219,40 +222,32 @@ A combo, readily capable of decrypting a burning and uncomfortable truth.
 <p>
 The wolf shows me photographs depicting the  
 astronaut with a fresh wound in her skull, 
-then still girdled by a valley of flesh. 
+then still girdled by bulbous meat. 
 The random sequence of horror focuses on how the  
 lower jaw articulates with the skull, 
 the different shapes of lips and formations of
 mouth into an animation of screaming.
-
-He is observing my reaction, and I try to conceal my sexual arousal
+He is observing my reaction, and I try to conceal my sexual arousal 
 by cleaning away rotten flesh and feces underneath my fringed nails. 
 Close now, I'm inhaling  the vapor coming from his enourmous scent gland
 a pleasant smell of semen and crude oil.
-
 Still dazed from the only just and imminent eruption of violence
-common among ghouls, I remember reading Ballard writing on 
+common among ghouls, I remember reading writing on 
 trauma changes sexuality and opens new possibilities. 
-
 Far from reality I'm 
 speculating to be able to touch and inspect the ripples forming in his upper maw. 
-
 his rough tongue, cleaning away 
 wounds that sin leaves in the weak soul, 
 Scar tissue washed of the scum that sin deposits on our spirit. 
 </p>
 
 <h6>Wolf, all about wolves</h6>
-<p>Hoodlum with gold chains</p>
-<p>and double fur coat</p>
-is the wolf anthropol, is he a cop<br>
-
-<p>hate the image in the mirror<br> 
-wants to be betterbetter<br>
-yes nietzsche is in the same fuckin cage<br>
-you like to think diff, but ur the same.</p> 
-
-
+<p>O Cephalophore, o cephalophore</p>
+<p>where to put the precious spore?</p>
+<p>maybe in ur marooned eyes</p>
+<p>telling anyway only lies.</p>
+<p>and ur elongated hole</p>
+<p>stinks like a rotten mole</p>
 
 
 
