edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -198,7 +198,7 @@ urge to move, which doesn't give me any relief
 and only worsens the static grinding that is there but unable to locate.
 I decide to sit down on a black stone in empty space to 
 figure out what to do.
-The same obsession which forced me to move along
+The same obsession which forced me to move about
 now glues me to the cold rock.
 Strangely enough I find safety in there, 
 perhaps this can be explained because of its ferric content,
@@ -208,7 +208,7 @@ but I hunger for more.
 Desire is driving me insane, wants me
 to bow to the doctrine of the image.
 Then this wolf comes along. 
-Hoodlum's strong and powerful body holds supernatural sense
+A hoodlum with a strong and powerful body that holds supernatural sense
 that carries 
 abilities to locate and kill quadrupedals way larger than life itself.
 It sniffs out my pubic hair, which 
@@ -221,12 +221,24 @@ A combo, readily capable of decrypting a burning and uncomfortable truth.
 
 <p>
 The wolf shows me photographs depicting the  
-astronaut with a fresh wound in her skull, 
+astronaut with a raw fracture of the cranial bone, 
 then still girdled by bulbous meat. 
-The random sequence of horror focuses on how the  
+
+A chaotic sequence of horror, which focuses on how the  
 lower jaw articulates with the skull, 
-the different shapes of lips and formations of
-mouth into an animation of screaming.
+together with attached flesh and muscle
+model different shapes of lips and the mouth.
+
+is morphing into an animation of screaming.
+
+
+The bleeding hole with 
+fragments of bone, hair, eye and brain tissue
+is clearly visible.
+Slowly how swelling thickened and bruising from the upper to the lower 
+after trauma. A lesion with a purple center.
+
+
 He is observing my reaction, and I try to conceal my sexual arousal 
 by cleaning away rotten flesh and feces underneath my fringed nails. 
 Close now, I'm inhaling  the vapor coming from his enourmous scent gland
@@ -245,9 +257,10 @@ Scar tissue washed of the scum that sin deposits on our spirit.
 <p>O Cephalophore, o cephalophore</p>
 <p>where to put the precious spore?</p>
 <p>maybe in ur marooned eyes</p>
-<p>telling anyway only lies.</p>
+<p>telling anyway just lies.</p>
 <p>and ur elongated hole</p>
 <p>stinks like a rotten mole</p>
+
 
 
 
