edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -223,21 +223,35 @@ A combo, readily capable of decrypting a burning and uncomfortable truth.
 The wolf shows me photographs depicting the  
 astronaut with a raw fracture of the cranial bone, 
 then still girdled by bulbous meat. 
-
-A chaotic sequence of horror, which focuses on how the  
+A random sequence of trauma, focusing
+on how the  
 lower jaw articulates with the skull, 
-together with attached flesh and muscle
-model different shapes of lips and the mouth.
+and in combination with flesh and muscles,
+models different shapes of lips and the mouth.
+This is the point of formation of horror, 
+where a sudden blow provokes startle response
+and immediately morphs into an animation of screaming,
+which inevitably leads to extra violence.
 
-is morphing into an animation of screaming.
+Exitement
+My bad, 
 
+a surrendering to ground
+would have helped to avoid further casualties.
 
-The bleeding hole with 
-fragments of bone, hair, eye and brain tissue
+The bleeding hole with fragments of bone, hair, eye and brain tissue
 is clearly visible.
-Slowly how swelling thickened and bruising from the upper to the lower 
-after trauma. A lesion with a purple center.
+The graphic material displays
+the posttraumatic
+how swelling thickened and bruising from the upper to the lower 
+evolves.
+The contour of the face deface
+In future imagined,  as 
+mass of pulp in rich colorful
+with a purple center.
 
+
+parade
 
 He is observing my reaction, and I try to conceal my sexual arousal 
 by cleaning away rotten flesh and feces underneath my fringed nails. 
