edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -220,16 +220,17 @@ A combo, readily capable of decrypting a burning and uncomfortable truth.
 </p>
 
 <p>
-The wolf shows me photographs depicting the  
+Wolf shows me photographs depicting the  
 astronaut with a raw fracture of the cranial bone, 
 then still girdled by bulbous meat. 
-A random sequence of trauma, focusing
-on how the  
-lower jaw articulates with the skull, 
+The random sequence of trauma, focuses 
+on how the lower jaw articulates with the skull, 
 and in combination with flesh and muscles,
 models different shapes of lips and the mouth.
-This is the point of formation of horror, 
-where a sudden blow provokes startle response
+
+A point of formation of horror, 
+
+when a sudden blow provokes startle response
 and immediately morphs into an animation of screaming,
 which inevitably leads to extra violence.
 
