edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -223,43 +223,52 @@ A combo, readily capable of decrypting a burning and uncomfortable truth.
 Wolf shows me photographs depicting the  
 astronaut with a raw fracture of the cranial bone, 
 then still girdled by bulbous meat. 
-The random sequence of trauma, focuses 
+
+
+
+A random sequence of trauma, that focuses 
 on how the lower jaw articulates with the skull, 
 and in combination with flesh and muscles,
 models different shapes of lips and the mouth.
 
-A point of formation of horror, 
 
+Captured is roughly the point of formation of horror, 
 when a sudden blow provokes startle response
 and immediately morphs into an animation of screaming,
-which inevitably leads to extra violence.
-
-Exitement
-My bad, 
-
-a surrendering to ground
+which inevitably leads to extra violence, 
+whilst a surrendering to ground
 would have helped to avoid further casualties.
 
 The bleeding hole with fragments of bone, hair, eye and brain tissue
 is clearly visible.
+
 The graphic material displays
-the posttraumatic
-how swelling thickened and bruising from the upper to the lower 
-evolves.
-The contour of the face deface
-In future imagined,  as 
-mass of pulp in rich colorful
-with a purple center.
+how swelling thickened and bruising from the upper to the lower jaw
+evolves
+but 
+it is left open to the power of imagination, how 
+the contour of the face further changes over time.
 
-
+One can only speculate how the mass of defaced flesh will
+develop in all colors within the 
+rich spectrum of a rainbow, which are difficult to define and 
+and draw a precise line from a purple center.
 parade
 
+Not shown is also the point of penetratation of the 
+difficult to capture the fleeting instant,  
+when the bullet hits the bone already over. 
+
+</p>
+
+
+<p>
 He is observing my reaction, and I try to conceal my sexual arousal 
 by cleaning away rotten flesh and feces underneath my fringed nails. 
 Close now, I'm inhaling  the vapor coming from his enourmous scent gland
 a pleasant smell of semen and crude oil.
 Still dazed from the only just and imminent eruption of violence
-common among ghouls, I remember reading writing on 
+common among ghouls, I remember reading that 
 trauma changes sexuality and opens new possibilities. 
 Far from reality I'm 
 speculating to be able to touch and inspect the ripples forming in his upper maw. 
