edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -223,48 +223,58 @@ A combo, readily capable of decrypting a burning and uncomfortable truth.
 Wolf shows me photographs depicting the  
 astronaut with a raw fracture of the cranial bone, 
 then still girdled by bulbous meat. 
-
-
-
-A random sequence of trauma, that focuses 
+On thumbing through, the images seem like 
+a random sequence of trauma, 
+that focuses 
 on how the lower jaw articulates with the skull, 
 and in combination with flesh and muscles,
-models different shapes of lips and the mouth.
+models a medley of shapes of lips and the mouth.
+But in rapt contemplation
+a shocking and majestic truth flashed upon me.
+The images were shot
+with an instinctive sense for cinematography and
+the desire to
+communicate the point of formation of horror.
+They capture startle response provoked by 
+the sudden and threatening stimuli, 
+an automated defense mechanism, 
+which inevitably leads to further violence.
+A more potent blow and thus total
+destruction followed by a quiet, peaceful surrendering to ground
+would have helped to avoid
+the negative affect of a long list of casualities. 
+In this animation of screaming
+the gaping hole with fragments of bone, eye and brain tissue
+is clearly visible, surrounded by clotted blood glistening on 
+once neatly styled fair hair.
 
-
-Captured is roughly the point of formation of horror, 
-when a sudden blow provokes startle response
-and immediately morphs into an animation of screaming,
-which inevitably leads to extra violence, 
-whilst a surrendering to ground
-would have helped to avoid further casualties.
-
-The bleeding hole with fragments of bone, hair, eye and brain tissue
-is clearly visible.
 
 The graphic material displays
 how swelling thickened and bruising from the upper to the lower jaw
 evolves
-but 
-it is left open to the power of imagination, how 
-the contour of the face further changes over time.
+but it is left open to the power of imagination, how 
+the contour of the face will grotesquely evolve over time.
 
 One can only speculate how the mass of defaced flesh will
 develop in all colors within the 
 rich spectrum of a rainbow, which are difficult to define and 
 and draw a precise line from a purple center.
-parade
+
 
 Not shown is also the point of penetratation of the 
 difficult to capture the fleeting instant,  
+live
 when the bullet hits the bone already over. 
 
 </p>
 
 
 <p>
-He is observing my reaction, and I try to conceal my sexual arousal 
+I can feel he is observing my reaction, his eyes piercing
+my downcast look in an unapologetic way
+and I try to conceal my sexual arousal 
 by cleaning away rotten flesh and feces underneath my fringed nails. 
+
 Close now, I'm inhaling  the vapor coming from his enourmous scent gland
 a pleasant smell of semen and crude oil.
 Still dazed from the only just and imminent eruption of violence
@@ -272,9 +282,10 @@ common among ghouls, I remember reading that
 trauma changes sexuality and opens new possibilities. 
 Far from reality I'm 
 speculating to be able to touch and inspect the ripples forming in his upper maw. 
-his rough tongue, cleaning away 
-wounds that sin leaves in the weak soul, 
-Scar tissue washed of the scum that sin deposits on our spirit. 
+His rough tongue, 
+washing away the scum that sin deposits in the wounds of the weak soul .
+An event of anomaly, that would 
+leave me  with irregular scar tissue. 
 </p>
 
 <h6>Wolf, all about wolves</h6>
@@ -282,58 +293,12 @@ Scar tissue washed of the scum that sin deposits on our spirit.
 <p>where to put the precious spore?</p>
 <p>maybe in ur marooned eyes</p>
 <p>telling anyway just lies.</p>
-<p>and ur elongated hole</p>
-<p>stinks like a rotten mole</p>
+<p>Elon gated holes</p>
+<p></p>
+putrefactive bacterium
 
+hanson, moorhead, bryant. whoami
+shapeshifter, shedding my skin.
 
-
-
-<!-----------------------The Modal <div id="id01" class="modal"> 
-<div class="modal-content">  
-<div class="row"> 
- 
-<div class="column">     
-<img src="images/33_tos.jpg"> 
-</div> 
- 
-<div class="column">     
-<p>Pre-order  cards and start building your deck before anyone else does!</p> 
-    <h3>Parental Advisory</h3>    
-<p>Explicit Lyrics</p> 
- 
-   <h1>strong langage</h1> 
- 
-    <p>sexual & violent content</p> 
- 
-masturbation of the senses     
- 
-<p><span onclick="document.getElementById('id01').style.display='none'" class="yupt">nope</span> 
-</p> 
- 
-<p><span class="smallfont">*for the first 5 respondents excl. postage and packaging</span></p>  
- 
-    </div> 
- 
-</div><!--row --> 
-</div><!--modal-content--> 
-</div><!--modal--> 
- 
-</div><!--container 
- 
-<script> 
-//Get the modal    
-function initialSetup() { 
-  if (document.getElementById('id01') != null) { 
-    setTimeout(function() { 
-      document.getElementById('id01').style.display = 'block'; 
-    }, 2000); 
-  } 
-} 
- 
-initialSetup(); 
-         
-</script> 
-------!> 
-
-</body>
+<body>
 </html>
